squirrels tail and hangman pages
squirrels tail and hangman pages with project images, changed home page project logo images, added home nav,  coming soon page for resume

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Projects</a></li>
-							<!-- <li><a href="#second">Second Section</a></li> -->
 							<li><a href="#cta">Currently</a></li>
+							<li><a href="#footer">Contact</a></li>
+
 						</ul>
 					</nav>
 
@@ -59,7 +60,10 @@
 										</header>
 										<p>Hello! བཀྲ་ཤིས་བདེ་ལེགས! (Hello in Tibetan script) <br><br>
 
-											I am currently an undergraduate student at Macalester College pursuing a B.A. in Computer Science with a concentration in Cognitive Science. I am interested in the fields of technology and the mind, and particularly where the two intersect! I am continually advancing my programming skills and expanding my knowledge in the sciences. I strive to utilize my passions to drive forth positive change and meaningful contributions to the world’s of technology, cognition, and their interdisciplinary relationships!
+											Currently an undergraduate student at Macalester College pursuing a B.A. in Computer Science with a concentration in Cognitive Science. 
+											I am interested in the fields of technology and the mind, and particularly where the two intersect! 
+											I am continually advancing my programming skills and expanding my knowledge in the sciences. 
+											I strive to utilize my passions to drive forth positive change and meaningful contributions to the world's of technology, cognition, and their interdisciplinary fields!
 											
 											<br><br>
 											Outside of academia, you will often find me immersed in a book or typing away on my laptop, writing yet another random story!
@@ -81,7 +85,14 @@
 								<ul class="features">
 								
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<!-- <span class="icon major style3 fa-copy"></span>
+										<img src="spaceBG2.jpeg" alt="Solar Exodus Image" style="width: 100px; height: 100px;"> -->
+
+										<span style="position: relative; display: inline-block; width: 220px; height: 220px;">
+											<img src="Exodus BG.jpeg" alt="Solar Exodus BG" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+										</span>
+										<!-- <br><br> -->
+
 										<h3>Solar Exodus</h3>
 										<p>
 											<!-- Developed a twist on Space Invaders by collaborating with team members and applying OOP principles like inheritance and polymorphism.										 -->
@@ -91,7 +102,12 @@
 
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<!-- <span class="icon major style5 fa-gem"></span> -->
+
+										<span style="position: relative; display: inline-block; width: 220px; height: 220px;">
+											<img src="Squirrel Start Screen cite page.png" alt="Squirrel Start Screen Circle" style="width: 100%; height: 100%; border-radius: 50%; object-fit:cover;">
+										</span>
+
 										<h3>A Squirrel’s-Tail</h3>
 										<p>A Valentine's Day and squirrel-themed platform game for a 48H game jam.</p>
 										<a href="squirrel-tail.html" class="button small">Learn More</a>
@@ -99,10 +115,13 @@
 									</li>
 
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Hangman</h3>
-										<p>A Macalester-themed version of the classic Hangman game.</p>
-										<a href="lunar-zodiac.html" class="button small">Learn More</a>
+										<!-- <span class="icon solid major style1 fa-code"></span> -->
+										<span style="position: relative; display: inline-block; width: 220px; height: 220px;">
+											<img src="Hangman Green full.png" alt="Squirrel Start Screen Circle" style="width: 100%; height: 100%; border-radius: 50%; object-fit:cover;">
+										</span>
+										<h3>Mini Hangman</h3>
+										<p>A Macalester-themed recreation of the classic Hangman game.</p>
+										<a href="hangman.html" class="button small">Learn More</a>
 
 									</li>
 								</ul>
