--- a/solar-exodus.html
+++ b/solar-exodus.html
@@ -23,6 +23,14 @@
 						<p>A twist on Space Invaders</p>
 					</header>
 
+                 <!-- Nav -->
+					<nav id="nav">
+						<ul>
+                            <li><a href="index.html">Home</a></li> 
+						</ul>
+					</nav>
+
+
 				<!-- Main -->
 					<div id="main">
 
@@ -31,20 +39,21 @@
 								<!-- <span class="image main"><img src="exodus front.png" alt="" /></span> -->
 								<h2>Overview</h2>
                                 <!-- <p><span class="image left"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent lorem ipsum dolor sit amet veroeros consequat. Etiam tempus lorem ipsum.</p> -->
-                                <p><span class="image right"><img src="exodus start screen.png" alt="" /></span>
+                                <p><span class="image right"><img src="exodus start screen.png" alt="" height="370"/></span>
                                     <!-- Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vesaccumsan eu faucibus..</p> -->
                                 <p>
                                     A COMP127, Object Oriented Programming in Java, final course project.
                                 </p>
 								<p>
                                     We reimagined the classic Space Invaders into a solar system-themed adventure.
-                                    Upon starting the game, you will be greeted with audio feedback that sets the storyline and provides instruction (See image on the right for the start screen). 
-                                    <br><br>The mission is to shoot down the sun, positioned at the center, while evading enemy solar flares and reflecting lasers. The orbiting planets pose additional challenges; hitting them causes the lasers to reflect back at you. 
-                                    You must hitting Earth, as it will cost you a life. There are only three lives to complete the mission successfully (See image below for the game interface).
+                                    Upon starting the game, the player is greeted with audio feedback that provides the storyline and instruction.
+                                    The mission is to shoot down the sun, positioned at the center, while evading enemy solar flares. The orbiting planets pose an additional challenge; hitting them causes the lasers to reflect back. 
+                                    The player must avoid hitting Earth, as it will cost a life and there are only three lives to complete the mission successfully.
+                                    <h5>(See image on the right for the start screen and below for the game interface.)</h5> 
                                     
                                     <br><br>
 
-                                    <p><span class="image left"><img src="exodus interface.png" alt="" /></span> 
+                                    <p><span class="image left"><img src="exodus interface.png" alt="" height="370"/></span> 
                                     <h2>Technical Implementation</h2>
                                     By using object-oriented programming concepts such as inheritance, polymorphism, and encapsulation, we were able to significantly elevate our project. 
                                     Inheritance was implemented to extend the Earth and Sun from the Planet class, facilitating the reuse of shared structures, behaviors, and attributes. 
@@ -56,22 +65,25 @@
 								<br><h2>How to Play</h2>
                                 <ol>
                                     <li>Keep your ears open for the amazing storyline and start the mission!</li>
-                                    <li>Control the spaceship along the bottom of the screen with your mousepad or left/right arrow keys</li>
-                                    <li>To shoot the lasers press the spacebar or click your mousepad/mouse</li>
+                                    <li>Control the spaceship along the bottom of the screen with your mousepad or left/right arrow keys.</li>
+                                    <li>To shoot the lasers press the spacebar or click your mousepad/mouse.</li>
                                     <li>Avoid the sun flares and hitting the earth! Also watch out for lasers reflecting off the planets. These can cost you a life!</li>
                                     <li>Shoot the sun down until it disappears! And you complete the mission!</li>
                                 </ol>
                                 <h2>Limitations</h2>
-								The fundamental design limitations may include, no-pause feature after a life is lost, too many lasers on the canvas at the one time can lead to lagging in the game-play processing. This is a result from a dense and complicated canvas.animate method which consists of multiple if statements and loops. Possible lagging may occur during game-play every few seconds or so.
-                                <br><br>Our project aims to be inclusive, diversity, accessible to the majority of populations. The game includes the following limitations in accesibility:
+								A fundamental design limitation is that when there are too many lasers on the canvas at one time, it can lead to lagging in the game-play processing. 
+                                This is a result from a dense and complicated <code>canvas.animte</code> method which consists of multiple if-statements and loops. Possible lagging may occur during game-play every few seconds or so as well.
+                                <br><br>This project aims to be inclusive for the majority of the population. Solar Exodus includes the following limitations in accesibility:
+                                 
                                 </p>
                                 <ul>
                                     <li>Players of younger age or those who lack hand-eye coordination may find it more difficult to play and complete the mission.</li>
                                     <li>A person who uses an assistive device or has physical disabilities may also find it quite difficult to play the game. Those with visual impairment will be unable to interact with the visual elments of the game.</li>
-                                    <!-- <br>An unintended consequence of our software is that it may promote aggressive gameplay and behaviors. We do not foresee our program being used in an oppressive situation but they may exist: One possible situation of the program being used in a malicious way, is it could be recreated and used to scam people out of money if the game were monitized.</p> -->
                                 </ul>
-                                <br>    <h4>For more, visit <a href="https://github.com/mac-comp127-marshs24/project-SolarExodus">Solar Exodus</a> </h4>
-                                </section>
+                                <br>
+                                <h5>Game Developers: Batsambuu Batbold, Nadezhda Dominguez Salinas, and Yeshe Jangchup</h5>    
+                                <h5>For more, visit <a href="https://github.com/mac-comp127-marshs24/project-SolarExodus">Solar Exodus</a> </h5>
+                            </section>
 
 					</div>
 
@@ -82,7 +94,7 @@
                         <h2>Shall we?</h2>
                         <p>Actively seeking opportunities to apply my skills, deepen my expertise, and grow both personally and professionally!</p>
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">RESUME</a></li>
+                            <li><a href="coming soon.html" class="button">RESUME</a></li>
                         </ul>
                     </section>
                     <section>
