--- a/squirrel-tail.html
+++ b/squirrel-tail.html
@@ -23,18 +23,64 @@
 						<p>A Valentine's Special</p>
 					</header>
 
+                <!-- Nav -->
+					<nav id="nav">
+						<ul>
+                            <li><a href="index.html">Home</a></li> 
+						</ul>
+					</nav>
+
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
-							</section>
+                                
+								<h2>Overview</h2>
+                                <p><span class="image right"><img src="Squirrel Game UI.png" alt="" height = "350" /></span></p>
+
+								<p>
+                                    <!-- A game jam, renamed Cupid's Jam, was organized by the Game Devs at Mac student organization at Macalester College. This project was a collaborative effort with other members of the organization,  -->
+                                    During Cupid's Jam, a game jam hosted by the Game Devs at Mac student organization at Macalester College, this Valentine's Day themed-game was created from the ground up within a 48-hour time constraint.
+
+                                </p>
+								<p>
+                                    A Squirrel's Tail is a platform jumping game in which a squirrel is at the bottom of a tree and must jump on the platforms to climb up towards its lover at the top of the tree without falling. 
+                                    Players must avoid the flying birds and use the moving platforms strategically to increase their score with each platform ascended. 
+                                    <h5>We used Canva for the pleasing graphics and aesthetics (See image on the right for the game interface and the images below for the different windows throughout the game).</h5>
+
+                                </p>
+                                <br>
+                                <div class="box alt">
+                                    <div class="row gtr-uniform">
+                                        <!-- <div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div> -->
+                                        <div class="col-4"><span class="image fit"><img src="Squirrel Start Screen.png" alt="" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="Squirrel Options.png" alt="" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="Squirrel Story.png" alt="" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="Squirrel Instructions.png" alt="" height="200"/></span></div>
+
+                                    </div>
+                                </div>
+                                <!-- </section> -->
+
+                            <!-- <section id="future" class="main"> -->
+
+								<h2>Future Implementations</h2>
+								<p>
+									There are quite a few future implementations we could work on for this project. Namely being: 
+									<ul>
+										<li>Adjust the play window to match the size of the Main Menu window to ensure a full-screen experience and prevent the window from shrinking upon starting the game.</li>		
+										<li>Add levels of difficulty (Level 1, Level 2, Level 3 etc.) and at the end of each level, the squirrel reaches its lover instead of an endless high-score game.</li>
+                                        <li>Use the up or space keys to jump rather the squirrel consistently jump up and down.</li>	
+                                        <li>Collect hearts as bonus points</li>
+									</ul>
+								</p>
+
+
+                                <h5>Game Developers: Ramatoulaye Bah, Destiny Osemwengie, and Yeshe Jangchup</h5>    
+                                <h5>For more, visit <a href="https://github.com/yeshedj/A-Squirrels-Tail">A Squirrel's Tail</a> </h5>
+
+                            </section>
 
 					</div>
 
@@ -45,7 +91,7 @@
                         <h2>Shall we?</h2>
                         <p>Actively seeking opportunities to apply my skills, deepen my expertise, and grow both personally and professionally!</p>
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">RESUME</a></li>
+                            <li><a href="coming soon.html" class="button">RESUME</a></li>
                         </ul>
                     </section>
                     <section>
