home page resume coming soon

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 							<h2>Shall we?</h2>
 							<p>Actively seeking opportunities to apply my skills, deepen my expertise, and grow both personally and professionally!</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">RESUME</a></li>
+								<li><a href="coming soon.html" class="button">RESUME</a></li>
 							</ul>
 						</section>
 						<section>
