organized folders, updated image paths

--- a/squirrel-tail.html
+++ b/squirrel-tail.html
@@ -37,7 +37,7 @@
 							<section id="content" class="main">
                                 
 								<h2>Overview</h2>
-                                <p><span class="image right"><img src="Squirrel Game UI.png" alt="" height = "350" /></span></p>
+                                <p><span class="image right"><img src="images\Squirrel Game UI.png" alt="A Squirrel's Tail Game Interface" height="350" /></span></p>
 
 								<p>
                                     <!-- A game jam, renamed Cupid's Jam, was organized by the Game Devs at Mac student organization at Macalester College. This project was a collaborative effort with other members of the organization,  -->
@@ -54,10 +54,10 @@
                                 <div class="box alt">
                                     <div class="row gtr-uniform">
                                         <!-- <div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div> -->
-                                        <div class="col-4"><span class="image fit"><img src="Squirrel Start Screen.png" alt="" height="200"/></span></div>
-                                        <div class="col-4"><span class="image fit"><img src="Squirrel Options.png" alt="" height="200"/></span></div>
-                                        <div class="col-4"><span class="image fit"><img src="Squirrel Story.png" alt="" height="200"/></span></div>
-                                        <div class="col-4"><span class="image fit"><img src="Squirrel Instructions.png" alt="" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="images\Squirrel Start Screen.png" alt="A Squirrel's Tail Start Window" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="images\Squirrel Options.png" alt="A Squirrel's Tail Options Window" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="images\Squirrel Story.png" alt="A Squirrel's Tail Storyline Window" height="200"/></span></div>
+                                        <div class="col-4"><span class="image fit"><img src="images\Squirrel Instructions.png" alt="A Squirrel's Tail Instructions Window" height="200"/></span></div>
 
                                     </div>
                                 </div>
