--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
 									</div>
-									<span class="image"><img src="profile-pic.JPG" alt="" /></span>
+									<span class="image"><img src="images\profile-pic.JPG" alt="" /></span>
 								</div>
 							</section>
 
@@ -89,7 +89,7 @@
 										<img src="spaceBG2.jpeg" alt="Solar Exodus Image" style="width: 100px; height: 100px;"> -->
 
 										<span style="position: relative; display: inline-block; width: 220px; height: 220px;">
-											<img src="Exodus BG.jpeg" alt="Solar Exodus BG" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+											<img src="images\Exodus BG.jpeg" alt="Solar Exodus BG" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
 										</span>
 										<!-- <br><br> -->
 
@@ -105,7 +105,7 @@
 										<!-- <span class="icon major style5 fa-gem"></span> -->
 
 										<span style="position: relative; display: inline-block; width: 220px; height: 220px;">
-											<img src="Squirrel Start Screen cite page.png" alt="Squirrel Start Screen Circle" style="width: 100%; height: 100%; border-radius: 50%; object-fit:cover;">
+											<img src="images\Squirrel Start Screen cite page.png" alt="Squirrel Start Screen Circle" style="width: 100%; height: 100%; border-radius: 50%; object-fit:cover;">
 										</span>
 
 										<h3>A Squirrel’s-Tail</h3>
@@ -117,7 +117,7 @@
 									<li>
 										<!-- <span class="icon solid major style1 fa-code"></span> -->
 										<span style="position: relative; display: inline-block; width: 220px; height: 220px;">
-											<img src="Hangman Green full.png" alt="Squirrel Start Screen Circle" style="width: 100%; height: 100%; border-radius: 50%; object-fit:cover;">
+											<img src="images\Hangman Green full.png" alt="Squirrel Start Screen Circle" style="width: 100%; height: 100%; border-radius: 50%; object-fit:cover;">
 										</span>
 										<h3>Mini Hangman</h3>
 										<p>A Macalester-themed recreation of the classic Hangman game.</p>
@@ -125,11 +125,7 @@
 
 									</li>
 								</ul>
-								<!-- <footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer> -->
+							
 							</section>
 
 						<!-- Second Section -->
